--- a/style.css
+++ b/style.css
@@ -1,328 +1,46 @@
 body{
-    font-family: "Montserrat", sans-serif;
-    margin: 0;
-    background-color: black;
-    color: white;
-    overflow: hidden;
+    text-align: center;
 }
 
-.main{
-     display: flex;
-     height: 100vh;
-     padding: 0.5rem;
+h3 {
+    position: absolute;
+    top: 100px;
+    right: 100px;
 }
 
-.sidebar{
-    background-color: black;
-    width: 340px;
-    margin-right: 0.75rem;
+.btn{
+    height: 200px;
+    width: 200px;
+    border-radius: 20%;
+    border: 10px solid black;
+    margin: 3rem;
 }
 
-.main-content{
-    background-color: #121212;
-    flex: 1;
-    border-radius: 1rem;
-    overflow: auto;
-    padding: 0 1.5rem;
-}
-.music-player{
-    background-color: black;
-    position: fixed;
-    bottom: 0px;
-    width: 100%;
-    height: 72px;
-}
-
-a{
-    text-decoration: none;
-    color: white;
-}
-
-.nav{
-    border-radius: 1rem;
-    background-color: #121212;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    height: 100px;
-    padding: 0.5rem 0.75rem;
-}
-
-.nav-option{
-    line-height: 40px;
-    opacity: 0.7;
-    padding: 0.5rem 0.75rem;
-}
-
-.nav-option:hover{
-    opacity: 1;
-}
-
-.nav-option i{
-    font-size: 1.25rem;
-}
-
-.nav-option a{
-    font-size: 1rem;
-    margin-left: 1rem;
-}
-
-.library{
-    background-color: #121212;
-    border-radius: 1rem;
-    height: 100%;
-    margin-top: 0.75rem;
-}
-
-.options{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.lib-options img{
-    height: 1.25rem;
-    width: 1.25rem;
-}
-
-.icons{
-    font-size: 1.25rem;
-    opacity: 0.7;
-    margin-right: 1rem;
-    display: flex;
-}
-
-.icons i{
-    opacity: 0.7;
-    margin-right: 1rem; 
-}
-
-.icons i:hover{
-    opacity: 1;
-}
-
-.box{
-    background-color: #232323;
-    height: 8rem;
-    border-radius: 0.75rem;
-    margin: 0.75rem 0.75rem 1.75rem 0.75rem;
-    padding: 0.75rem 1rem;
-}
-
-.box-p1{
-    font-size: 1rem;
-    font-weight: 500;
-}
-
-.box-p2{
-    font-size: 0.85rem;
-    opacity: 0.8;
-}
-
-.badge{
-    background-color: white;
-    border: none;
-    border-radius: 100px;
-    padding: 0.25rem 1rem;
-    font-weight: 700;
-    margin: 0.5rem;
-    height: 2rem;
-    width: fit-content;
-}
-
-.dark{
-    background-color: black;
-    color: white;
-}
-
-.sticky-nav{
-    position: sticky;
-    top: 0;
-    background-color: #121212;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 1rem 0;
-    z-index: 10;
-}
-
-.sticky-nav-icons{
-    margin-left: 0.75rem;
-}
-
-.sticky-nav-options{
+.btn-container {
     display: flex;
     justify-content: center;
-    align-items: center;
-    margin-right: 1rem;
 }
 
-@media (max-width: 1000px) {
-    .hide{
-        display: none;
-    }
+.yellow{
+    background-color: yellow;
 }
 
-.card{
-    background-color: #232323;
-    width: 150px;
-    border-radius: 0.5rem;
-    padding: 0.5rem;
-    margin-left: 1.5rem;
-    margin-top: 1rem;
-}
-
-.card-container{
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.card-title{
-    font-weight: 600;
-}
-
-.card-info{
-    font-size: 0.85rem;
-    opacity: 0.8;
-}
-
-.footer{
-    height: 300px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.line{
-    width: 90%;
-    height: 50%;
-    border-top: 1px solid white;
-    opacity: 0.4;
-}
-
-.music-player{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.album{
-    width: 25%;
-}
-
-.player{
-    width: 50%;
-}
-
-.player-controls{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.controls{
-    width: 25%;
-}
-
-.player-control-icon{
-    height: 1rem;
-    margin: 0 1rem;
-    opacity: 0.7;
-}
-
-.player-control-icon:hover{
-    opacity: 1;
-}
-
-.playback-bar{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.progress-bar{
-    width: 70%;
-    appearance: none;
-    background-color: transparent;
-    cursor: pointer;
-}
-
-.progress-bar::-webkit-slider-runnable-track{
-    background-color: #ddd;
-    border-radius: 100px;
-    height: 0.25rem;
-}
-
-
-
-.progress-bar::-webkit-slider-thumb{
-    appearance: none;
-    height: 16px;
-    width: 16px;
-    background-color: #1bd760;
-    border-radius: 50%;
-    margin-top: -5.5px;
-}
-
-.album{
-    display: flex;
-    align-items: center;
-    margin: 0.5rem;
-}
-
-.album-icon{
-    display: flex;
-    align-items: center;
-}
-
-.music{
-    height: 75%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    padding-right: 5px;
-}
-
-.music-name{
-    font-size: 0.75rem;
-    font-weight: 700;
-    margin: 0.1rem 1rem;
-}
-
-.artist{
-    font-size: 0.6rem;
-    opacity: 0.9;
-    margin: 0.25rem 1rem;
-}
-
-.controls{
-    display: flex;
-    align-items: center;
-    height: 72px;
-}
-
-.volume{
-    appearance: none;
-    -webkit-appearance: none;
-    background-color: transparent;
-    cursor: pointer;
-}
-
-.volume::-webkit-slider-thumb{
-    appearance: none;
-    height: 16px;
-    width: 16px;
-    background-color: #1bd760;
-    border-radius: 50%;
-    margin-top: -5.5px;
-}
-
-.volume::-webkit-slider-runnable-track{
-    background-color: #ddd;
-    border-radius: 100px;
-    height: 0.25rem;
-}
-
-.volume::-webkit-progress-value{
+.red{
     background-color: red;
+}
+
+.green {
+    background-color: green;
+}
+
+.purple {
+    background-color: purple;
+}
+
+.flash {
+    background-color: white;
+}
+
+.userflash {
+    background-color: black;
 }
